--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.5",
+    "eslint": "^4.19.1",
     "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && mv build/static static && mv build templates",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
